feat: Add multi-tenant support and various DTOs for product and payment processing
- Introduced PageResponse DTO for paginated responses.
- Created CompanyProductListItem and ProductCatalogResponse DTOs for product details.
- Added ProductLocationStockView and ProductStockSummary DTOs for stock management.
- Implemented FidelityDiscountType enum for discount types in fidelity policies.
- Developed CompanyProductReadRepository for querying company products with pagination and search capabilities.
- Added ProductStockQueryRepository for summarizing and breaking down product stock by location.
- Created PaymentProviderAuthorizationUrlResponse DTO for payment provider responses.
- Implemented PaymentProviderOAuthStateService for managing OAuth state and cookies.
- Added RegisterResponse DTO for user registration responses.
- Introduced RateLimitExceededException for handling rate limit errors.
- Developed AuthenticationProtectionService to manage login and verification attempts with rate limiting.
- Added SQL migrations for enforcing multi-tenant isolation and adding discount types to fidelity policies.
- Implemented tests for tenant isolation in support services.